--- a/lab-cole/package.json
+++ b/lab-cole/package.json
@@ -1,15 +1,30 @@
 {
   "name": "lab-cole",
   "version": "1.0.0",
-  "description": "",
+  "description": "relationship-modeling",
   "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dbon": "mkdir -p ./db && mongod --dbpath ./db",
+    "dboff": "killall mongod",
+    "test": "jest -i --coverage"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.5",
+    "http-errors": "^1.6.2",
+    "mongoose": "^4.11.13",
+    "morgan": "^1.9.0"
+},
+  "devDependencies": {
+    "eslint": "^4.7.2",
+    "faker": "^4.1.0",
+    "jest": "^21.2.0",
+    "superagent": "^3.6.0"
+  }
 }
